cabal-version:      2.4
name:               t-server
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             EMQX-YangM
maintainer:         yangm@emqx.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules: T
                   , S

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.1.0
                    , stm
                    , containers
                    , random
                    , text
                    , binary
                    , time
                    , fused-effects
                    , fused-effects-optics
                    , fused-effects-process
                    , servant
                    , servant-server
                    , warp
                    , aeson
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -W
    -- ghc-options: -W -fspecialise-aggressively -O2
    -- ghc-options: -W -fspecialise-aggressively -O2

executable t-server
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.1.0,
        t-server,
        fused-effects-process

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -W -threaded -rtsopts
